--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,16 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+} 
+
+#pokeball {
+  position: absolute;
+  top: 20px;
+  left: -100px;
+  opacity: 0.6
+}
+
+#post {
+  overflow: hidden;
+  padding-left: 80px;
 }
